@@ -10,14 +10,14 @@ src/core/keybindings.c
 src/core/main.c
 src/core/prefs.c
 src/core/screen.c
-src/core/screen-bindings.h
 src/core/schema-bindings.c
 src/core/session.c
 src/core/util.c
-src/core/window-bindings.h
 src/core/window.c
 src/core/window-props.c
 src/core/xprops.c
+src/include/screen-bindings.h
+src/include/window-bindings.h
 src/metacity.desktop.in
 src/metacity.schemas.in.in
 src/metacity-wm.desktop.in
